# audio-processor

./: Cargo.toml  README.md
docker/: aarch64_linux.Dockerfile  armv7.Dockerfile  x86_linux.Dockerfile  x86_windows.Dockerfile
src/: main.rs
src/app_args/: mod.rs  validate.rs
src/logger/: mod.rs
src/wav/: mod.rs
tests/: cli.rs
