[package]
name = "wav-validator"
version = "0.1.0"
edition = "2021"
authors = ["David Christie <david.christie@nielsen.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
chrono = "0.4"
fern = "0.6"
clap = {version = "4.1", features = ["derive"]}

[dev-dependencies]
assert_cmd = "2"
